--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "meli-search",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
+  "main": "./view/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd api && npm run server",
-    "start": "cd view && npm run start",
-    "dev": "concurrently \"npm run server\" \"npm run start\""
+    "view": "cd view && npm run start",
+    "start": "node ./view/index.js",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "repository": {
     "type": "git",
