--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "view": "cd view && npm run start",
     "start": "node ./view/index.js",
     "dev": "concurrently \"npm run server\" \"npm run start\"",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "npm install --only=dev && npm install && npm run build"
   },
   "repository": {
     "type": "git",
