--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd api && npm run server",
     "view": "cd view && npm run start",
-    "start": "node ./view/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "dev": "concurrently \"npm run server\" \"npm run view\""
   },
   "repository": {
     "type": "git",
