--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/EMTelias/MeLiSearch#readme",
   "dependencies": {
-    "concurrently": "^5.0.0"
+    "bootstrap": "^4.3.1",
+    "concurrently": "^5.0.0",
+    "react-bootstrap": "^1.0.0-beta.14"
   }
 }
