--- a/view/package.json
+++ b/view/package.json
@@ -39,7 +39,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "proxy": "http://localhost:5000"
 }
