--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,7 +1,7 @@
 {
   "author" : {
-    "name" : "Ezequiel",
-    "lastname" : "Telias"
+    "name" : "AUTHORNAME",
+    "lastname" : "AUTHORLASTNAME"
   }
 }
 
